# satsgotchi

./: README.md
contracts/oracle/: Cargo.toml
contracts/oracle/src/: main.rs
contracts/satsgotchi/: Cargo.toml
contracts/satsgotchi/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
frontend/: index.html
scripts/: test.sh
