[package]
name = "satsgotchi"
version = "0.1.0"
edition = "2021"
description = "Satsgotchi game state program for Arch Network"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arch-program = "0.5.4"
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "1.18"

[profile.release]
opt-level = 3
lto = true
overflow-checks = true
